--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/libfranka
-	previous = 
-	base = 9718128
+	previous = 9718128
+	base = f9423e5
 	trim = 
 	trimbase = 
