--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/libfranka
-	previous = 
-	base = 4ae1392
+	previous = 4ae1392
+	base = 38043aa
 	trim = 
 	trimbase = 
